--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
 
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi-v7a'
+            abiFilters 'armeabi-v7a',"x86"
             // 还可以添加 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64' 'x86', 'x86_64', 'mips', 'mips64'
         }
 
@@ -90,6 +90,8 @@ dependencies {
     compile 'com.tinkerpatch.sdk:tinkerpatch-android-sdk:1.1.8'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.parse:parse-android:1.13.1'
+    compile 'com.liulishuo.filedownloader:library:1.6.8'
+
 //    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     compile project(':easeui')
     compile files('libs/alipaySdk-20170922.jar')
