--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -246,6 +246,7 @@
         <activity android:name=".ui.personcenter.WebActivity"
             android:label="网页"/>
         <activity android:name=".ui.personcenter.WebPayActivity"
+            android:launchMode="singleTask"
             android:label="支付网页"/>
 
 
@@ -262,7 +263,10 @@
             android:fitsSystemWindows="true"
             android:label="直播详细"
             />
-
+        <activity android:name=".ui.live.HealthZhiBoGroupActivity"
+            android:fitsSystemWindows="true"
+            android:label="交流群"
+            />
         <activity
             android:name=".ui.live.livepic.ShowImageFromWebActivity"
              />
@@ -526,9 +530,11 @@
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
-            android:launchMode="singleTop" />
+            android:screenOrientation="portrait"
+            />
 
 
+        <service android:name=".service.PlayerService"/>
     </application>
 
 
